Added openFPGALoader to the Docker container

--- a/.devcontainer.json
+++ b/.devcontainer.json
@@ -5,5 +5,7 @@
         "vscode": {
           "extensions": ["teros-technology.teroshdl"]
         }
-      }
+      },
+
+    "runArgs": ["--privileged"]
 }
