Change VS-Code extension for Verilog syntax highlighting

--- a/.devcontainer.json
+++ b/.devcontainer.json
@@ -3,7 +3,7 @@
 
     "customizations": {
         "vscode": {
-          "extensions": ["teros-technology.teroshdl",
+          "extensions": ["eirikpre.systemverilog",
             "ms-vscode.cpptools",
             "ms-vscode.makefile-tools"]
         }
